# mcp-tutorial

./: .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  dev.env  docker-compose.yml  fundamental_analysis.db  generate_key.sh  jwt_server.py  requirements.txt  server.py  update_dataset.ipynb
fundamental_analysis/2025-04-17/: fundamental_analysis.csv  fundamental_analysis.db
fundamental_analysis/2025-07-18/: fundamental_analysis.csv  fundamental_analysis.db
fundamental_analysis/2025-08-31/: fundamental_analysis.csv  fundamental_analysis.db
fundamental_analysis/2025-10-23/: fundamental_analysis.csv  fundamental_analysis.db
fundamental_analysis/2025-12-02/: fundamental_analysis.csv  fundamental_analysis.db
google-adk-agent/: Dockerfile  pyproject.toml  requirements.txt
google-adk-agent/fundamental_analyst/: agent.py  dev.env
jwt-server/: Dockerfile  dev.env  main.py  pyproject.toml  requirements.txt
jwt-server/src/: config.py  main.py
mcp-server/: Dockerfile  dev.env  main.py  pyproject.toml  requirements.txt
mcp-server/src/: config.py  main.py  tools.py  utils.py
openai-agent/: README.md  dev.env  main.py  main_workflow.py  pyproject.toml  servers.py  utils.py
openai-agent/db/: __init__.py  base_query.py
openai-agent/experiments/: __init__.py  utils.py
openai-agent/financial_agents/: __init__.py  financial_analyst.py  financial_manager.py
openai-agent/tools/: __init__.py  bovespa_price.py  code_interpreter.py  (+4 more)
scripts/: evaluation_final.ipynb  extract_fundamental_analysis.py  parse_cvm.ipynb  parse_dfp_cvm.ipynb  parse_prices.ipynb
(+8 files in other folders)
