[project]
name = "jwt-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=45.0.7",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "pyjwt>=2.10.1",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
]